Almost finished, Title bug

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="home section" id="home">
         <div class="home_container container grid">
           <div>
-            <img src="assets/img/home.png" alt="#" class="home_container" />
+            <img src="assets/img/home.png" alt="" class="home_img" />
           </div>
 
           <div class="home_data">
@@ -102,12 +102,14 @@
       <section class="specs section grid" id="specs">
         <h2 class="section_title section_title_gradient">Specs</h2>
 
-        <div class="specs_content grid">
-          <div class="specs_data">
-            <i class="ri-bluetooth-line specs_icon"></i>
-            <h3 class="specs_title">Connection</h3>
-            <span class="specs_subtitle">Bluetooth v5.2</span>
+        <div class="specs_container container grid">
+          <div class="specs_content grid">
+            <div class="specs_data">
+              <i class="ri-bluetooth-line specs_icon"></i>
+              <h3 class="specs_title">Connection</h3>
+              <span class="specs_subtitle">Bluetooth v5.2</span>
           </div>
+        
 
           <div class="specs_data">
             <i class="ri-battery-charge-line specs_icon"></i>
@@ -124,16 +126,14 @@
           <div class="specs_data">
             <i class="ri-mic-line specs_icon"></i>
             <h3 class="specs_title">Microphone</h3>
-            <span class="specs_subtitle"
-              >Supports Apple Siri<br />
-              and Google</span
-            >
+            <span class="specs_subtitle">Supports Apple Siri<br>and Google</span>
           </div>
         </div>
 
         <div>
           <img src="assets/img/specs.png" alt="" class="specs_img" />
         </div>
+      </div>
       </section>
 
       <!-- CASE  -->
@@ -181,6 +181,7 @@
             <article class="products_card">
                 <div class="products_content">
                     <img src="assets/img/product1.png" alt="" class="product_img">
+
                     <h3 class="products_title">Black</h3>
                     <span class="products_price">$249</span>
 
@@ -193,6 +194,7 @@
             <article class="products_card">
                 <div class="products_content">
                     <img src="assets/img/product2.png" alt="" class="product_img">
+
                     <h3 class="products_title">Red Black</h3>
                     <span class="products_price">$249</span>
 
@@ -205,6 +207,7 @@
             <article class="products_card">
                 <div class="products_content">
                     <img src="assets/img/product3.png" alt="" class="product_img">
+
                     <h3 class="products_title">Night Black</h3>
                     <span class="products_price">$249</span>
 
@@ -217,6 +220,7 @@
             <article class="products_card">
                 <div class="products_content">
                     <img src="assets/img/product4.png" alt="" class="product_img">
+
                     <h3 class="products_title">Blue</h3>
                     <span class="products_price">$249</span>
 
@@ -229,6 +233,7 @@
             <article class="products_card">
                 <div class="products_content">
                     <img src="assets/img/product5.png" alt="" class="product_img">
+
                     <h3 class="products_title">Twilight Gray</h3>
                     <span class="products_price">$249</span>
 
