--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="nav_menu" id="nav-menu">
           <ul class="nav_list">
             <li class="nav_item">
-              <a href="#home" class="nav_link">Home</a>
+              <a href="#home" class="nav_link active-link">Home</a>
             </li>
             <li class="nav_item">
               <a href="#specs" class="nav_link">Specs</a>
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="nav_toggle" id="nav_toggle">
+        <div class="nav_toggle" id="nav-toggle">
           <i class="ri-function-line"></i>
         </div>
       </nav>
@@ -100,7 +100,7 @@
 
       <!-- SPECS  -->
       <section class="specs section grid" id="specs">
-        <h2 class="section_title section_title_gradient">Specs</h2>
+        <h2 class="section_title section_title-gradient">Specs</h2>
 
         <div class="specs_container container grid">
           <div class="specs_content grid">
@@ -108,9 +108,8 @@
               <i class="ri-bluetooth-line specs_icon"></i>
               <h3 class="specs_title">Connection</h3>
               <span class="specs_subtitle">Bluetooth v5.2</span>
-          </div>
+            </div>
         
-
           <div class="specs_data">
             <i class="ri-battery-charge-line specs_icon"></i>
             <h3 class="specs_title">Battery</h3>
@@ -138,7 +137,7 @@
 
       <!-- CASE  -->
       <section class="case section grid" id="case">
-        <h2 class="section_title section_title_gradient">Case</h2>
+        <h2 class="section_title section_title-gradient">Case</h2>
 
         <div class="case_container container grid">
           <div>
