--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 
       <!-- PRODUCTS  -->
        <section class="products section" id="products">
-        <h2 class="section_title section_title-gradient">
+        <h2 class="section_title section_title-gradient products_line">
             Choose <br> Your Style
         </h2>
 
         <div class="products_container container grid">
             <article class="products_card">
                 <div class="products_content">
-                    <img src="assets/img/product1.png" alt="" class="product_img">
+                    <img src="assets/img/product1.png" alt="" class="products_img">
 
                     <h3 class="products_title">Black</h3>
                     <span class="products_price">$249</span>
@@ -192,7 +192,7 @@
 
             <article class="products_card">
                 <div class="products_content">
-                    <img src="assets/img/product2.png" alt="" class="product_img">
+                    <img src="assets/img/product2.png" alt="" class="products_img">
 
                     <h3 class="products_title">Red Black</h3>
                     <span class="products_price">$249</span>
@@ -205,7 +205,7 @@
 
             <article class="products_card">
                 <div class="products_content">
-                    <img src="assets/img/product3.png" alt="" class="product_img">
+                    <img src="assets/img/product3.png" alt="" class="products_img">
 
                     <h3 class="products_title">Night Black</h3>
                     <span class="products_price">$249</span>
@@ -218,7 +218,7 @@
 
             <article class="products_card">
                 <div class="products_content">
-                    <img src="assets/img/product4.png" alt="" class="product_img">
+                    <img src="assets/img/product4.png" alt="" class="products_img">
 
                     <h3 class="products_title">Blue</h3>
                     <span class="products_price">$249</span>
@@ -231,7 +231,7 @@
 
             <article class="products_card">
                 <div class="products_content">
-                    <img src="assets/img/product5.png" alt="" class="product_img">
+                    <img src="assets/img/product5.png" alt="" class="products_img">
 
                     <h3 class="products_title">Twilight Gray</h3>
                     <span class="products_price">$249</span>
@@ -285,7 +285,7 @@
                         <a href="#" class="footer_link">Updates</a>
                     </li>
                     <li>
-                        <a href="#" class="footer_link">Provides</a>
+                        <a href="#" class="footer_link">Buy with Bitcoin</a>
                     </li>
                 </ul>
             </div>
@@ -326,10 +326,9 @@
     </a>
 
     <!-- SCROLL REVEAL-->
-    <script src=""></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
 
-
-    <!-- SCRIPT.JS -->
+    <!-- MAIN SCRIPT.JS -->
     <script src="assets/js/script.js"></script>
   </body>
 </html>
